Primo: Add 'expand_groups' argument
Adding 'expand_groups' to a primo search will embed all the expanded
FRBR groups.
